# ml-assignment

./: .gitignore  README.md  pyproject.toml  submission.csv  titanic.ipynb
